--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Link your CSS stylesheet -->
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <header></header>
 </body>
 </html>
