--- a/index.html
+++ b/index.html
@@ -5,9 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Link your CSS stylesheet -->
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/style/index.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <section>
+            <div class="name">Derrick Teartt</div>
+            <div>
+        <nav class="nav">
+             <a href="#">Home</a>
+             <a href="/about.html">About</a>
+             <a href="/contact.html">Contact</a>
+             <a href="/projects.html">Projects</a>
+        </nav>
+            </div>
+        </section>
+    </header>
+    <section>
+        <div= class=projects>
+            <h1>Derrick Teartt</h1>
+        </div>
+    </section>
+    <section class="img-sec">
+        <div>
+            <img src="https://picsum.photos/200/300">
+            <br>project
+        </div>
+        <div>
+            <img src="https://picsum.photos/200/300" alt="">
+            <br>project
+        </div>
+        <div>
+            <img src="https://picsum.photos/200/300" alt="">
+            <br>project
+        </div>
+        <div>
+            <img src="https://picsum.photos/200/300" alt="">
+            <br>project
+        </div>
+        <div>
+            <img src="https://picsum.photos/200/300" alt="">
+            <br>project
+        </div>
+        <div>
+            <img src="https://picsum.photos/200/300" alt="">
+            <br>project
+        </div>
+    </section>
+    <footer>
+        <section class="contact" >
+            <div> 
+           <button onclick="location.href='/contact.html';">contact me</button>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
