--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
         <section>
             <div class="name">Derrick Teartt</div>
             <div>
-        <nav class="nav">
-             <a href="#">Home</a>
-             <a href="/about.html">About</a>
-             <a href="/contact.html">Contact</a>
-             <a href="/projects.html">Projects</a>
-        </nav>
+                <nav class="nav-bar">
+                     <a href="#">Home</a>
+                     <a href="/about.html">About</a>
+                     <a href="/contact.html">Contact</a>
+                     <a href="/projects.html">Projects</a>
+                </nav>
             </div>
         </section>
     </header>
     <section>
         <div= class=projects>
-            <h1>Derrick Teartt</h1>
+            <h1>Derrick Teartt<button>projects</button></h1>
+            
         </div>
     </section>
     <section class="img-sec">
@@ -41,15 +42,15 @@
         </div>
         <div>
             <img src="https://picsum.photos/200/300" alt="">
-            <br>project
+            <br>ice-cream
         </div>
         <div>
             <img src="https://picsum.photos/200/300" alt="">
-            <br>project
+            <br>amusement park
         </div>
         <div>
             <img src="https://picsum.photos/200/300" alt="">
-            <br>project
+            <br>curry
         </div>
     </section>
     <footer>
